Add key deps to pkg setup; add base version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = dragnet-data
-description = NLP, before and after spaCy
+version = 0.1.0
+description = compile training dataset for dragnet
 long_description = file: README.md
 long_description_content_type = text/markdown
 
@@ -10,7 +11,10 @@ package_dir =
 packages = find:
 python_requires = >=3.6, <3.9
 install_requires =
+    arrow >= 0.15.0
     extruct >= 0.9.0
+    feedparser >= 5.2.0
+    ftfy >= 5.5.0
     httpx >= 0.12.0
     lxml >= 4.4.0
 
