Get set up to use toml instead of json for data outputs
toml is pretty great tbh

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ install_requires =
     ftfy >= 5.5.0
     httpx >= 0.12.0
     lxml >= 4.4.0
+    toml >= 0.10.0
 
 [options.extras_require]
 dev =
