Improve gitignore for data dir
i _think_ this is the best way to do it...

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,8 @@
 *.ipynb_checkpoints/
 
 # data
-data/TODO/*
-data/html/*
-data/meta/*
+data/**/*.html
+data/**/*.toml
 !data/rss_feeds.toml
 !data/page_uuids.txt
 
