--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = dragnet-data
 version = 0.1.0
-description = compile training dataset for dragnet
+description = code and data used to build a training dataset for dragnet models
 long_description = file: README.md
 long_description_content_type = text/markdown
 
